--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                                     <a href="https://www.figma.com/proto/AUwWbFEKcQEOyakcm3Whfc/%EB%B0%80%EB%A6%AC%EC%9D%98-%EC%84%9C%EC%9E%AC-%EA%B8%B0%ED%9A%8D%EC%84%9C?page-id=0%3A1&node-id=3-1553&p=f&viewport=1299%2C-363%2C0.2&t=OCz21Er6mwJHgTaU-8&scaling=min-zoom&content-scaling=fixed&hide-ui=1" target="_blank">피그마 보기</a>
                                 </div>
                                 <div class="button">
-                                    <a href="/project2/index.html" target="_blank">홈페이지</a>
+                                    <a href="project2/index.html" target="_blank">홈페이지</a>
                                 </div>
                             </div>
                         </div>
@@ -198,7 +198,7 @@
                                 <li><span style="font-weight: 600;">본인 기여도 : </span>100%</li>
                             </ul>
                             <div class="button">
-                                <a href="/project1/index.html" target="_blank">홈페이지</a>
+                                <a href="project1/index.html" target="_blank">홈페이지</a>
                             </div>
                         </div>
                     </div>
